# ml_workflows

./: .gitignore  LICENSE  README.md  main.py  pipeline.py  pyproject.toml
.github/workflows/: build_docker.yaml  code_check.yaml
data_prep/: component_func.py  pyproject.toml
eval/: component_func.py  pyproject.toml
onnx_optimize/: Dockerfile  component_func.py  pyproject.toml
train/: component_func.py  pyproject.toml
