[tool.poetry]
name = "ml_workflows"
version = "0.1.0"
description = "Implementing Machine Learning Workflows Orchestration using Kubeflow Pipelines and Vertex AI."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.5"
kfp = "2.8.0"
google-cloud-aiplatform = "1.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
