[tool.poetry]
name = "eval"
version = "0.1.0"
description = "Weather Model Evaluation Kubeflow Component"
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
kfp = "2.8.0"
google-cloud-storage = "2.18.2"
scikit-learn = "1.5.1"
# Darwin is added for people to be able to execute component (or parts of it) locally.
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1-cp312-none-macosx_11_0_arm64.whl", platform = "darwin" }
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1-cp312-cp312-macosx_11_0_arm64.whl", platform = "darwin" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
