[tool.poetry]
name = "onnx-optimize"
version = "0.1.0"
description = "ONNX Model Optimization Component"
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
kfp = "2.8.0"
onnxruntime = "1.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
